fixed alignment and bold in 01

--- a/foundations/01-css-methods/styles.css
+++ b/foundations/01-css-methods/styles.css
@@ -3,7 +3,7 @@ div
  color:white;
  background-color:red;
  font-size:32px;
- font-style:strong;
- align:center;
+ font-weight:strong;
+ text-align:center;
 }
 
